# django-elasticsearch-metrics

./: .containerignore  .dockerignore  .gitignore  .konchrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  setup.cfg  testbox.Containerfile  testbox.Dockerfile  tox.ini
.github/workflows/: test_djelme.yml
elasticsearch_metrics/: __init__.py  apps.py  constants.py  date_coverage.py  djelmetrics_db.py  djelmetrics_imps.py  elastic6.py  exceptions.py  factory.py  field.py  protocols.py  registry.py  time_coverage.py
elasticsearch_metrics/imps/: __init__.py  elastic6.py  elastic8.py
elasticsearch_metrics/management/: color.py
elasticsearch_metrics/management/commands/: check_metrics.py  djelme_backend_check.py  djelme_backend_setup.py  djelme_backend_types.py  djelme_check.py  djelme_setup.py  djelme_types.py  show_metrics.py  sync_metrics.py
elasticsearch_metrics/tests/: __main__.py  _test_util.py  conftest.py  settings.py  test_autodiscovery.py  test_doctests.py  test_factory.py  test_field.py  test_imps_elastic6.py  test_imps_elastic8.py  test_metrics.py  test_metrics_elastic6.py  test_registry.py  util.py
elasticsearch_metrics/tests/dummy6app/: apps.py  metrics.py
elasticsearch_metrics/tests/dummy8app/: __init__.py  apps.py  metrics.py
elasticsearch_metrics/tests/test_management_commands/: test_check_metrics.py  test_djelme_check.py  test_djelme_setup.py  test_djelme_types.py  test_show_metrics.py  test_sync_metrics.py
elasticsearch_metrics/util/: __init__.py  anon_enough.py  chainmap.py  django.py  index_name.py  timeparts.py  timeseries_naming.py  unique_together.py
tests/: _base_e2e.py  settings.py
