[project]
name = "django-elasticsearch-metrics"
version = "2026.0.0"
description = "Django app for storing time-series metrics in Elasticsearch."
authors = [
    {name = "CenterForOpenScience", email = "support@cos.io"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4"
keywords = [
    "django",
    "elastic",
    "elasticsearch",
    "elasticsearch-dsl",
    "time-series",
    "metrics",
    "statistics",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
elastic6 = [ "elasticsearch6-dsl>=6.3.0,<7.0.0" ]
elastic8 = [ "elasticsearch8>=8.0.0,<9.0.0" ]
# elastic9 = [ "elasticsearch9>=9.0.0,<10.0.0" ]
anydjango = [ "django" ]

[project.urls]
repository = "http://github.com/CenterForOpenScience/django-elasticsearch-metrics"
changelog = "https://github.com/CenterForOpenScience/django-elasticsearch-metrics/blob/master/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
tests = [
    "factory-boy==3.3.3",
    "tox>=4.0.0",
    "coverage>=7.13.0",
]
lint = [
    "flake8==7.3.0",
    "flake8-bugbear==25.10.21",
    "black==25.11.0",
]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
    "konch>=3.0.0",
    "poetry==2.3.2",  # matches testbox.Containerfile
]

[tool.poetry]
packages = [
    { include = "elasticsearch_metrics" }
]

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.mypy]
# start with an ideal: enable strict type-checking, then loosen in module-specific config
# see https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
strict = true
## BEGIN possible loosenings from `strict`:
disallow_subclassing_any = false
# warn_unused_configs = false
# warn_redundant_casts = false
# warn_unused_ignores = false
# strict_equality = false
# strict_concatenate = false
# check_untyped_defs = false
# disallow_untyped_decorators = false
# disallow_any_generics = false
disallow_untyped_calls = false
# disallow_incomplete_defs = false
disallow_untyped_defs = false
# no_implicit_reexport = false
# warn_return_any = false
## END loosenings of `strict`

# prefer types that can be understood by reading code in only one place
local_partial_types = true
# avoid easily-avoidable dead code
warn_unreachable = true
# prefer direct imports
implicit_reexport = false

# got untyped dependencies -- this is fine
ignore_missing_imports = true
disable_error_code = "import-untyped,import-not-found"
